2010-04-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* lunar-downloader.cpp|h: Update according to DownloaderRequest api changes.

2010-04-27  Jeffrey Stedfast  <fejj@novell.com>

	* lunar-downloader.cpp|h: New source files for wrapping the curl
	downloader.

	* lunar-launcher.cpp: Get rid of the FileDownloadState and load
	the curl bridge instead.

2010-04-27  Jeffrey Stedfast  <fejj@novell.com>

	* lunar-launcher.cpp (create_window): Add an event handler for
	Surface::ErrorEvent so that we can get some sort of error printed
	to the console when something fails.

2010-04-26  Jeffrey Stedfast  <fejj@novell.com>

	* lunar-launcher.cpp: Rewritten to not use gtkmozembed at all.

2010-04-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile.am:
	* lunar-launcher.cpp|h: Added. Based heavily on agviewer.
